# formo-2

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PRODUCTION_ROADMAP.md  README.md  formo-ir.schema.json  formo2.cmd  formo2.code-workspace  main.fm  open-formo.cmd
.github/workflows/: ci.yml
crates/formo-backend-desktop/: Cargo.toml
crates/formo-backend-web/: Cargo.toml
crates/formo-cli/: Cargo.toml
crates/formo-cli/src/: args.rs  output.rs
crates/formo-parser/: Cargo.toml
crates/formo-resolver/: Cargo.toml
crates/formo-style/: Cargo.toml
crates/formo-typer/: Cargo.toml
docs/: FORMO_LOGIC_LAYER.md  IR_COMPATIBILITY.md  IR_MIGRATIONS.md  LIBRARY_BOUNDARY.md  PANDUAN_PENGGUNAAN.md  RELEASE_CHECKLIST.md
fixtures/ir/: basic_page.ir.json  for_if_state.ir.json
logic/contracts/: navigation_port.fl
logic/controllers/: app_controller.fl
logic/services/: session_service.fl
scripts/: auto_enable_formo_editor_support.ps1  ci_run_readme_examples.ps1  ci_verify_logic_parity.ps1  ci_verify_release_readiness.ps1  dev_sync_formo_vscode_extension.ps1  formo2_bootstrap.ps1  formo2_cli.ps1  formo2_doctor.ps1  formo_repo_paths.ps1  open_formo_workspace.ps1
styles/: base.fs
