[workspace]
members = [
  "crates/formo-lexer",
  "crates/formo-parser",
  "crates/formo-resolver",
  "crates/formo-typer",
  "crates/formo-style",
  "crates/formo-ir",
  "crates/formo-backend-web",
  "crates/formo-backend-desktop",
  "crates/formo-cli"
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["Formo Team"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
