[package]
name = "formo-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "formo"
path = "src/main.rs"

[dependencies]
formo-parser = { path = "../formo-parser" }
formo-resolver = { path = "../formo-resolver" }
formo-typer = { path = "../formo-typer" }
formo-style = { path = "../formo-style" }
formo-ir = { path = "../formo-ir" }
formo-backend-web = { path = "../formo-backend-web" }
formo-backend-desktop = { path = "../formo-backend-desktop" }
serde_json = { workspace = true }
